--- a/.github/workflows/phd2_exporter.yaml
+++ b/.github/workflows/phd2_exporter.yaml
@@ -26,7 +26,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build tests
-        name: build-tests
+        id: build-tests
         uses: docker/build-push-action@v5
         with:
           target: tester
