--- a/.github/workflows/phd2_exporter.yaml
+++ b/.github/workflows/phd2_exporter.yaml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           target: tester
-          tags: test
+          tags: test-image:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
       
