--- a/.github/workflows/phd2_exporter.yaml
+++ b/.github/workflows/phd2_exporter.yaml
@@ -31,6 +31,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
   build_test_publish:
     name: Build, test, and publish
+    needs: buildx
     runs-on: ubuntu-latest
     permissions:
       contents: read
