--- a/.github/workflows/phd2_exporter.yaml
+++ b/.github/workflows/phd2_exporter.yaml
@@ -8,12 +8,13 @@ env:
   IMAGE_NAME: ${{ github.repository }}:latest
 
 jobs:
-  buildx:
-    name: Setup docker
+  build-and-push-image:
+    name: Build, test, and publish
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -21,7 +22,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -29,14 +30,7 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-  build_test_publish:
-    name: Build, test, and publish
-    needs: buildx
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
+      
       - name: Build tests
         run: |
           docker build --target tester -t phd2_exporter_tests .
@@ -52,3 +46,32 @@ jobs:
       - name: Publish
         run: |
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      # - name: Build tests
+      #   id: build-tests
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     target: tester
+      #     tags: test-image:latest
+      #     cache-from: type=gha
+      #     cache-to: type=gha,mode=max
+      
+      # - name: Run tests
+      #   uses: addnab/docker-run-action@v3
+      #   with:
+      #     image: test-image:latest
+          
+      # - name: Extract metadata (tags, labels) for Docker
+      #   id: meta
+      #   uses: docker/metadata-action@v5
+      #   with:
+      #     images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      # - name: Build and push
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     target: phd2_exporter-release
+      #     push: true
+      #     tags: ${{ steps.meta.outputs.tags }}
+      #     labels: ${{ steps.meta.outputs.labels }}
+      #     cache-from: type=gha
